# captus

./: .gitignore  README.md  pyproject.toml
capture/: analysis.py  binary_picker.py  pbh_capture copy.py  pbh_capture.py  pbh_capture_3.py  pbh_capture_dimensionless.py  pbh_capture_dimless_compasys.py  pbh_capture_dimless_threebody.py  rebound_analysis.py  rebound_analysis_b_oldnew.py  rebound_analysis_c.py  rebound_analysis_d copy.py  rebound_analysis_dcopy.py  rebound_plotting_b copy.py  rebound_sim copy 2.py  rebound_sim.py  rebound_sim_mp_c.py  rebound_sim_mp_cc.py
notebooks/: capture_calculations copy 2.ipynb  capture_calculations copy 3.ipynb  capture_calculations copy 4.ipynb  capture_calculations copy.ipynb  capture_calculations.ipynb  capture_calculations_SJ.ipynb  capture_calculations_SJ_largerN.ipynb
scripts/: N_eq_per_vinf.py
src/: _version.py
src/analysis/: Analysis.py  rebound_analysis_a.py  rebound_analysis_a_NS2.py  rebound_analysis_b.py  rebound_analysis_d copy 2.py  rebound_analysis_d.py  rebound_analysis_d_alt.py
src/configurations/: Configuration.py  CygnusX1.yaml  IntermediateBHStar.yaml  SunJupiter.yaml
src/plotting/: Plotting.py  plotting_demo.ipynb  rebound_plotting_a.py  rebound_plotting_a_alt.py  rebound_plotting_b copy 2.py  rebound_plotting_b.py  rebound_plotting_d.py  rebound_plotting_d_alt.py
src/simulations/: MonteCarlo.py  MonteCarlo_impsamp.py  MonteCarlo_impsamp_v4.py  Rebound.py  Rebound_v2.py  Rebound_v3.py  Simulation.py  rebound_sim_mp_a.py  rebound_sim_mp_a_alt.py  rebound_sim_mp_b.py  rebound_sim_mp_b_alt.py  rebound_sim_mp_d.py  rebound_sim_mp_d_alt.py
src/utils/: calculations.py  calculations_v2.py  exceptions.py  misc.py  plotting_utils.py
